templates/formalms_template.yaml
---
# Source: formalms/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-formalms
  labels:
    helm.sh/chart: formalms-0.1.2
    app.kubernetes.io/name: formalms
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.3.0.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: formalms
    app.kubernetes.io/instance: release-name
---
# Source: formalms/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-formalms
  labels:
    helm.sh/chart: formalms-0.1.2
    app.kubernetes.io/name: formalms
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.3.0.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: formalms
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: formalms
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
      - name: release-name-formalms
        image: "ghcr.io/nicholaswilde/formalms:2.3.0.2-ls1"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
---
# Source: formalms/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-formalms
  labels:
    helm.sh/chart: formalms-0.1.2
    app.kubernetes.io/name: formalms
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.3.0.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  rules:
    - host: "formalms.192.168.1.203.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-formalms
                port:
                  number: 80
